--- a/gallary.html
+++ b/gallary.html
@@ -534,17 +534,19 @@
             
             // Array of image URLs
             const imageUrls = [
-                'pic1.jpg',
-                'pic2.jpg',
-                'pic3.jpg',
+                'pic1.jpeg',
+                'pic2.jpeg',
+                'pic3.jpeg',
                 'pic4.jpg',
-                'pic5.jpg',
-                'pic6.jpg',
-                'pic7.jpg',
-                'pic8.jpg',
-                'pic9.jpg',
-                'pic10.jpg',
-                'pic11.jpg'
+                'pic5.jpeg',
+                'pic6.jpeg',
+                'pic7.jpeg',
+                'pic8.jpeg',
+                'pic9.jpeg',
+                'pic10.jpeg',
+                'pic11.jpeg',
+                'pic12.jpeg',
+                'pic13.jpeg'
             ];
             
             // Create cards...
