--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
         <p class="subtitle">Every moment with you is a treasure worth keeping...</p>
         <div class="btn-container">
             <button class="btn color-btn">Change Colors 🎨</button>
-            <button class="btn">Enter Our Love Story ✨</button>
+            <button class="btn">Meri Sakhi Saumya🤭🤭🤭🤭 ✨</button>
         </div>
     </div>
     <p class="love-msg">Made with love, for my pookie 💕</p>
