--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
             <button class="btn">Meri Sakhi Saumya🤭🤭🤭🤭 ✨</button>
         </div>
     </div>
-    <p class="love-msg">Made with love, for my pookie 💕</p>
+    <p class="love-msg">For Samuya Pagal 💕</p>
 
     <script>
         const heartEmojis = ['💗', '💖', '💝', '💕', '♥️'];
