--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
     <p class="love-msg">For Samuya Pagal 💕</p>
 
     <script>
-        const heartEmojis = ['💗', '💖', '💝', '💕', '♥️'];
+        const heartEmojis = ['😉', '🤭', '🤗', '🍁', '🌼','🌺','🌸'];
         const gradients = [
             'linear-gradient(135deg, #ffafbd, #ffc3a0, #ffdde1)',
             'linear-gradient(135deg, #e0c3fc, #8ec5fc, #c2e9fb)',
